--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.3.1",
     "radix-vue": "^1.9.8",
