--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://cards-marketplace-api.onrender.com
+VITE_GOOGLE_CLIENT_ID=262441028705-ija0pksm10uhjs1kj65i071ms11rkh9c.apps.googleusercontent.com
